k8s/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: northernlink
spec:
  tls:
    - hosts:
        - staging.northernlinkshuttle.ca
        - dispatch.staging.northernlinkshuttle.ca
        - budget.staging.northernlinkshuttle.ca
      secretName: northernlink-tls
  rules:
    - host: staging.northernlinkshuttle.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: northernlink-website
                port:
                  name: http
    - host: dispatch.staging.northernlinkshuttle.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: northernlink-dispatcher
                port:
                  name: http
    - host: budget.staging.northernlinkshuttle.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: northernlink-budgeting
                port:
                  name: http
